# Polite-Retail-Scrapers

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: amazon_discover.py  fetch_one.py  nike_standalone.py
polite_retail_scrapers/: __init__.py  __main__.py  api.py  browser_fetch.py  captcha.py  config.py  fetch.py  parse_asos.py  parse_costco.py  parse_dispatch.py  parse_hm.py  parse_newegg.py  parse_overstock.py  parse_sephora.py  parse_target.py  parse_urbanoutfitters.py  parse_walmart.py  parse_wayfair.py
samples/amazon/: product.json
samples/asos/: product.json
samples/bestbuy/: product.json
samples/costco/: product.json
samples/dicks/: product.json
samples/hm/: product.json
samples/newegg/: product.json
samples/nike/: product.json
samples/nordstromrack/: README.md
samples/overstock/: product.json
samples/sephora/: product.json
samples/ulta/: product.json
samples/urbanoutfitters/: product.json
samples/walmart/: product.json
samples/wayfair/: README.md
scraper/: discover.py  parse.py  parse_bestbuy.py  parse_dicks.py  parse_nike.py  parse_nordstromrack.py  parse_ulta.py
